# Progetto_ProgressBar

./: CMakeLists.txt  FileLoader.cpp  FileLoader.h  Observable.h  Observer.h  ProgressBar.cpp  ProgressBar.h  main.cpp
Test/: Test.cpp  mainTest.cpp
